# liseq

./: .gitignore  LICENSE  readme.md  setup.cfg
liseq/: liseq_cli.py
liseq/core/: __init__.py  _codev_lang.py  _logic.py  _logic2.py
liseq/macro/: __init__.py  codev_export.liseq  codev_findbuf.liseq  codev_get_out.liseq  codev_get_ver.liseq  codev_nooutput.liseq  codev_outbuf.liseq  codev_output.liseq  codev_rename_fig.liseq  codev_startup.liseq  codev_suppressoutput.liseq  codev_templens.liseq
liseq/test/: arith_test.py  language_test.py  loop_test.py  set_test.py  test_arith.py  test_language.py  test_loop.py  test_set.py  types_test.py
liseq/util/: __init__.py
src/liseq/: liseq.py
src/liseq/codev_lang/: __init__.py
