[metadata]
name = liseq
author= Guillaume Allain
version = 0.0.1

[options]
python_requires = >=3.8
install_requires =
    pyparsing

include_package_data = true
# package_dir=
#     =liseq
packages=find:

# [options.packages.find]
# where=liseq

[options.entry_points]
console_scripts =
    liseq=liseq.liseq_cli:main
