[metadata]
name = liseq
author= Guillaume Allain
version = 0.2.0

[options]
python_requires = >=3.9
install_requires =
    pyparsing
package_dir=
    =.
packages=find:
include_package_data = true

[options.packages.find]
where=.

[options.entry_points]
console_scripts =
    liseq=liseq.liseq_cli:main

[options.package_data]
*=*.liseq

